Tue Aug  4 17:16:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

	  Updated release notes regarding changes in QueryCondition.

        * dds/DCPS/RakeResults_T.h:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageProducerImpl.java:

	  Fixed issues preventing JMS tests from running correctly.

Tue Aug  4 17:10:00 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Deadline/subscriber.cpp:

          Fixed unused variable warnings.

Tue Aug  4 02:46:26 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:

          Added lookup_instance() to DataWriter and DataReader
          idl and implementations according to spec and removed
          find_instance_handle() which is similar to the
          lookup_instance() function.

        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/EntityImpl.cpp:

          Added is_enabled() to access enabled_ flag.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/TopicImpl.cpp:

          Code updates according to spec:
          - Calling enable on an already enabled Entity returns OK
            and has no effect.
          - Calling enable on an Entity whose factory is not enabled
            will fail and return PRECONDITION_NOT_MET.
          - Non-changeable qos can be changed prior to calling
            the enable operation on the Entity.
          - Removed enabled_ flag checking in factory delete_*
            operations based on entity enable description that the
            factory operations are allowed when entity is not enabled.
