@@ -65,6 +65,12 @@ Writer::svc ()
     Messenger::Message message;
     message.subject_id = 99;
     ::DDS::InstanceHandle_t handle = message_dw->register_instance(message);
+    ::DDS::InstanceHandle_t lookup_handle = message_dw->lookup_instance (message);
+    if (lookup_handle == ::DDS::HANDLE_NIL || lookup_handle != handle)
+    {
+      cerr << "ERROR: lookup_instance test failed." << endl;
+      return 0;
+    }
 
     message.from       = CORBA::string_dup("Comic Book Guy");
     message.subject    = CORBA::string_dup("Review");
